# cone_detection

./: README.md  README_cone_detection.odt
0_Mosaic/fucking_vector_cv_point_2_mat_conversion/: CMakeLists.txt  vector_cv_point_2_mat_conversion.cpp
0_Mosaic/knn_template/: CMakeLists.txt  knn_template.cpp
1_color_filter/: CMakeLists.txt  cones_color_filter.cpp
2_crop_cone_templates/: CMakeLists.txt  crop_cone_templates.cpp
2_extract_cone_pattern/: CMakeLists.txt  cones_pattern_extraction.cpp
3_hsv_filter_and_contour_discovery/: CMakeLists.txt  cones_hsv_filter_and_contour_discovery.cpp
3b_hsv_color_space_cone_exploration/: CMakeLists.txt  cones_hsv_exploration.cpp  support.h
4_match_cone_pattern/: CMakeLists.txt  cones_pattern_matching.cpp  cones_pattern_matching_disorganized_mess.cpp  support.h
5_basic_features/: CMakeLists.txt
5_cone_parameter_extraction/: CMakeLists.txt  cones_parameter_extraction.cpp  support.h
6_basic_features/: CMakeLists.txt  basic_features.cpp
6_pipeline_1/: CMakeLists.txt  pipeline_1 _a_roi_with_knn.cpp  pipeline_1.cpp  support.cpp  support.h
common_code/: display_manager_class.cpp  display_manager_class.h  feature_detection.cpp  feature_detection.h  file_operations.cpp  file_operations.h  image_operations.cpp  image_operations.h
